--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Hello, world</h1>
+    <img src="https://pyxis.nymag.com/v1/imgs/260/250/46184df43c05ab8634927f8848667b5ca7-dolphin-beauty-lede.rvertical.w1200.jpg" alt="Happy Dolphin Picture">
     
 <script src='main.js'></script>
 </body>
