--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Deployment</title>
 </head>
 <body>
-    <h1>Hello, world</h1>
-    <img src="https://pyxis.nymag.com/v1/imgs/260/250/46184df43c05ab8634927f8848667b5ca7-dolphin-beauty-lede.rvertical.w1200.jpg" alt="Happy Dolphin Picture">
-    
+    <h1>Hello, world. My name is Begger, it's nice to meet you!</h1>
+    <img id="happyDolphin" src="https://pyxis.nymag.com/v1/imgs/260/250/46184df43c05ab8634927f8848667b5ca7-dolphin-beauty-lede.rvertical.w1200.jpg" alt="Happy Dolphin Picture">
+    <p>As you now know my name is begger. I'm a dolphin that lived along the inner coastal waters on the gulf side in the state of Florida. My home is just off of Casey Key island.</p>
 <script src='main.js'></script>
 </body>
 </html>
