--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <img id="happyFatDolphin" src="https://pyxis.nymag.com/v1/imgs/260/250/46184df43c05ab8634927f8848667b5ca7-dolphin-beauty-lede.rvertical.w1200.jpg" alt="Happy Dolphin Picture">
     <p>As you now know my name is begger. I'm a dolphin that lived along the inner coastal waters on the gulf side in the state of Florida. My home is just off of Casey Key island.</p>
     <button id="google">More Dolphins?</button>
-    <button id="popdolphins"> Add a Dolphin </button>
-
+    <button id="popDolphins"> Add a Dolphin </button>
 <script src='main.js'></script>
 </body>
 </html>
